Stable on Mobile, still needs content.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en" >
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>CHS Football</title>
       <!-- Compiled and minified CSS -->
+
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -286,14 +288,16 @@
                                                   <!-- END FIXED BUTTONS -->
                                                   <div class="centered">
                                                     <h1>
+                                                    <div class="spacer3">
                                                       <center> Welcome to Collierville High School Football </center>
                                                     </h1>
+                                                    </div>
                                                   </div>
                                                   <!-- Start Past, present, future -->
                                                   <div class="container marketing">
                                                     <!-- Three columns of text below the carousel -->
                                                     <div class="row">
-                                                      <div class="col-lg-4">
+                                                      <div class="col-md-4">
                                                         <img class="rounded-circle" src="imgs/olddragon.jpg" alt="Generic placeholder image" width="140" height="140">
                                                           <h2>The Past</h2>
                                                           <p>With 8 appearances in the state football playoffs over the last 10 years, Collierville is well known across the state for football. All all time record of 20-28 has helped cement Collierville in the high school football arena. Take a look at the people that continue to make this possible.</p>
@@ -302,7 +306,7 @@
                                                           </p>
                                                         </div>
                                                         <!-- /.col-lg-4 -->
-                                                        <div class="col-lg-4">
+                                                        <div class="col-md-4">
                                                           <img class="rounded-circle" src="imgs/newdragon.png" alt="Generic placeholder image" width="140" height="140">
                                                             <h2>The Present</h2>
                                                             <p>Led by Head Coach, Coach O'Neill, the Dragons are always getting prepared for the next season, constantly reminded of the standards they must uphold from the past. Take a look at this years Varsity Team below</p>
@@ -311,7 +315,7 @@
                                                             </p>
                                                           </div>
                                                           <!-- /.col-lg-4 -->
-                                                          <div class="col-lg-4">
+                                                          <div class="col-md-4">
                                                             <img class="square" src="imgs/jointheville.png" alt="Generic placeholder image" width="140" height="140">
                                                               <h2>The Future</h2>
                                                               <p>We are always looking for new Dragons, We would love to have you. Fill out this form and we will reach out to you personally. Thank you.
