Stable Headers working everywhere, I think

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<welcom!DOCTYPE html>
 <html lang="en" >
   <head>
     <meta charset="UTF-8">
@@ -286,6 +286,7 @@
                                                     </a>
                                                   </div>
                                                   <!-- END FIXED BUTTONS -->
+                                                  <div class="overall">
                                                   <div class="centered">
                                                     <h1>
                                                     <div class="spacer3">
