Additional Content, some formatting

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                                   <a href="schedule.html" target="_blank">Schedule</a>
                                                 </li>
                                                 <li>
-                                                  <a href="registration.html" target="_blank">Registration</a>
+                                                  <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                                 </li>
                                                 <li>
                                                   <a href="news.html" target="_blank">News</a>
@@ -172,7 +172,7 @@
                                               <a href="news.html" target="_blank">News</a>
                                             </li>
                                             <li>
-                                              <a href="registration.html" target="_blank">Registration</a>
+                                              <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                             </li>
                                             <li>
                                               <a href="sponsors.html" target="_blank">Sponsors</a>
