--- a/varsity.html
+++ b/varsity.html
@@ -142,7 +142,7 @@
                                                   <a href="schedule.html" target="_blank">Schedule</a>
                                                 </li>
                                                 <li>
-                                                  <a href="registration.html" target="_blank">Registration</a>
+                                                  <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                                 </li>
                                                 <li>
                                                   <a href="news.html" target="_blank">News</a>
@@ -171,7 +171,7 @@
                                               <a href="news.html" target="_blank">News</a>
                                             </li>
                                             <li>
-                                              <a href="registration.html" target="_blank">Registration</a>
+                                              <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                             </li>
                                             <li>
                                               <a href="sponsors.html" target="_blank">Sponsors</a>
