--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     <!-- End side nav bar -->
                                     <!-- start Background image -->
                                     <section class="video-container">
-                                      <img src="imgs/background.jpg">
+                                      <img src="imgs/sponsors.jpg">
                                       </section>
                                       <!-- end background image -->
                                       <!-- MODALS FOR ALL THE COACHES -->
