--- a/sponsors.html
+++ b/sponsors.html
@@ -201,7 +201,9 @@
                                     <!-- End side nav bar -->
                                     <!-- start Background image -->
                                     <div class="overall">
-                                      <img class="sectionaltcolor" src="imgs/varsityteam.jpg">
+                                      <section class="video-container">
+                                      <img src="imgs/background.jpg">
+                                      </section>
                                       
                                       <!-- end background image -->
                                       <!-- MODALS FOR ALL THE COACHES -->
