--- a/7thgrade.html
+++ b/7thgrade.html
@@ -201,7 +201,7 @@
                                     <!-- End side nav bar -->
                                     <!-- start Background image -->
                                     <div class="overall">
-                                      <img class="sectionaltcolor" src="imgs/varsityteam.jpg">
+                                      <img class="sectionaltcolor" src="imgs/8thgrade.jpg">
                                       
                                       <!-- end background image -->
                                       <!-- MODALS FOR ALL THE COACHES -->
