--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     <!-- End side nav bar -->
                                     <!-- start Background image -->
                                     <section class="video-container">
-                                      <img src="imgs/sponsors.jpg">
+                                      <img style="margin-top:5%;"  src="imgs/sponsors.jpg">
                                       </section>
                                       <!-- end background image -->
                                       <!-- MODALS FOR ALL THE COACHES -->
@@ -334,17 +334,17 @@
                                                             <div class="col-md-6">
                                                               <div class="card flex-md-row mb-4 box-shadow h-md-250">
                                                                 <div class="card-body d-flex flex-column align-items-start">
-                                                                  <strong class="d-inline-block mb-2 text-primary">World</strong>
+                                                                  <strong class="d-inline-block mb-2 text-primary">New Season</strong>
                                                                   <h3 class="mb-0">
-                                                                    <a class="text-light" href="#">Featured post</a>
+                                                                    <a class="text-light" href="#">Join us for Media Day</a>
                                                                   </h3>
-                                                                  <div class="mb-1 text-sm">Nov 12</div>
+                                                                  <div class="mb-1 text-sm">July 1st</div>
                                                                   <div class="row">
                                                                     <div class="col-md-6">
-                                                                      <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                                                                      <p class="card-text mb-auto">Media day is happening soon at the new Collierville High School Football Field. Be sure to join us on TBD.</p>
                                                                     </div>
                                                                     <div class="col-md-3">
-                                                                      <img src="imgs/huntercamp.jpg" style="max-width:230px;max-height: 100px;height:auto;width:auto;background-color: black;">
+                                                                      <img src="imgs/newdragon.png" style="max-width:230px;max-height: 100px;height:auto;width:auto;background-color: black;">
                                                                       </div>
                                                                     </div>
                                                                   </div>
@@ -354,14 +354,14 @@
                                                                class="col-md-6">
                                                                 <div class="card flex-md-row mb-4 box-shadow h-md-250">
                                                                   <div class="card-body d-flex flex-column align-items-start">
-                                                                    <strong class="d-inline-block mb-2 text-success">Design</strong>
+                                                                    <strong class="d-inline-block mb-2 text-success">Dragons in the NFL</strong>
                                                                     <h3 class="mb-0">
-                                                                      <a class="text-light" href="#">Post title</a>
+                                                                      <a class="text-light" href="#">Hunter Bradley Drafted</a>
                                                                     </h3>
-                                                                    <div class="mb-1 text-sm">Nov 11</div>
+                                                                    <div class="mb-1 text-sm">May 15th</div>
                                                                     <div class="row">
                                                                       <div class="col-md-6">
-                                                                        <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                                                                        <p class="card-text mb-auto">Hunter Bradley, a former Collierville Dragon, was recently drafted by the Green Bay Packers.<br>#DragonsintheNFL</p>
                                                                       </div>
                                                                       <div class="col-md-3">
                                                                         <img src="imgs/huntercamp.jpg" style="max-width:230px;max-height: 100px;height:auto;width:auto;background-color: black;">
