--- a/sponsors.html
+++ b/sponsors.html
@@ -511,8 +511,8 @@
                                                         <center> Sponsoring Collierville Football </center></h1>
 
                                                 <div class="spacer">
-                                                <div class="spacer2"></div>
-                                                <div class="rowcenter">
+                                    <div class="spacer2"></div>
+                                                <div class="rowcenter2">
 <div class="pl-3"><p>Sponsoring the CHS Kickoff Club is one of the best ways to advertise your business in Collierville. Dragon Football on Friday Nights is the biggest event in town. If you’d like to be a part of the Friday night lights this year, contact Hayden Argo (hargo1170@gmail.com) today!
 
 </p>
