Updated navbars, new facilities page

--- a/8thgrade.html
+++ b/8thgrade.html
@@ -125,8 +125,7 @@
                                     </li>
                                   </ul>
                                   <!-- end dropdown menu -->
-                                  <!-- Start nav bar -->
-                                  <div class="navbar-fixed">
+                      <div class="navbar-fixed">
                                     <nav class="transparent z-depth-0">
                                       <div class="nav-wrapper">
                                         <div class="row">
@@ -146,6 +145,9 @@
                                                 </li>
                                                 <li>
                                                   <a href="news.html" target="_blank">News</a>
+                                                </li>
+                                                <li>
+                                                  <a href="facilities.html" target="_blank">Facilities</a>
                                                 </li>
                                                 <li>
                                                   <a href="sponsors.html" target="_blank">Sponsors</a>
@@ -172,6 +174,9 @@
                                             </li>
                                             <li>
                                               <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
+                                            </li>
+                                            <li>
+                                              <a href="facilities.html" target="_blank">Facilities</a>
                                             </li>
                                             <li>
                                               <a href="sponsors.html" target="_blank">Sponsors</a>
