--- a/9and10yearold.html
+++ b/9and10yearold.html
@@ -19,7 +19,7 @@
                     </head>
                     <body>
                       <!-- Start Webpage -->
-                      <!-- Start dropdown menu -->
+<!-- Start dropdown menu -->
                       <ul id="dropdown" class="dropdown-content collection">
                         <li class="collection-item avatar">
                           <div class="row">
@@ -124,9 +124,7 @@
                                       </div>
                                     </li>
                                   </ul>
-                                  <!-- end dropdown menu -->
-                                  <!-- Start nav bar -->
-                                  <div class="navbar-fixed">
+                                  <!-- end dropdown menu -->                     <div class="navbar-fixed">
                                     <nav class="transparent z-depth-0">
                                       <div class="nav-wrapper">
                                         <div class="row">
@@ -146,6 +144,9 @@
                                                 </li>
                                                 <li>
                                                   <a href="news.html" target="_blank">News</a>
+                                                </li>
+                                                <li>
+                                                  <a href="facilities.html" target="_blank">Facilities</a>
                                                 </li>
                                                 <li>
                                                   <a href="sponsors.html" target="_blank">Sponsors</a>
@@ -172,6 +173,9 @@
                                             </li>
                                             <li>
                                               <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
+                                            </li>
+                                            <li>
+                                              <a href="facilities.html" target="_blank">Facilities</a>
                                             </li>
                                             <li>
                                               <a href="sponsors.html" target="_blank">Sponsors</a>
