--- a/6thgrade.html
+++ b/6thgrade.html
@@ -20,6 +20,7 @@
                     <body>
                       <!-- Start Webpage -->
                       <!-- Start dropdown menu -->
+                      <!-- Start dropdown menu -->
                       <ul id="dropdown" class="dropdown-content collection">
                         <li class="collection-item avatar">
                           <div class="row">
@@ -125,8 +126,8 @@
                                     </li>
                                   </ul>
                                   <!-- end dropdown menu -->
-                                  <!-- Start nav bar -->
-                                  <div class="navbar-fixed">
+                                  
+                      <div class="navbar-fixed">
                                     <nav class="transparent z-depth-0">
                                       <div class="nav-wrapper">
                                         <div class="row">
@@ -148,6 +149,9 @@
                                                   <a href="news.html" target="_blank">News</a>
                                                 </li>
                                                 <li>
+                                                  <a href="facilities.html" target="_blank">Facilities</a>
+                                                </li>
+                                                <li>
                                                   <a href="sponsors.html" target="_blank">Sponsors</a>
                                                 </li>
                                                 <li>
@@ -158,6 +162,49 @@
                                               </ul>
                                             </div>
                                           </div>
+                                          <!-- End nav bar -->
+                                          <!-- Start side nav bar -->
+                                          <ul class="side-nav" id="mobile-demo">
+                                            <li>
+                                              <a href="index.html" target="_blank">Home</a>
+                                            </li>
+                                            <li>
+                                              <a href="schedule.html" target="_blank">Schedule</a>
+                                            </li>
+                                            <li>
+                                              <a href="news.html" target="_blank">News</a>
+                                            </li>
+                                            <li>
+                                              <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
+                                            </li>
+                                            <li>
+                                              <a href="facilities.html" target="_blank">Facilities</a>
+                                            </li>
+                                            <li>
+                                              <a href="sponsors.html" target="_blank">Sponsors</a>
+                                            </li>
+                                            <li>
+                                              <a href="varsity.html" target="_blank">Varsity/JV</a>
+                                            </li>
+                                            <li>
+                                              <a href="freshman.html" target="_blank">Freshman</a>
+                                            </li>
+                                            <li>
+                                              <a href="8thgrade.html" target="_blank">8th Grade</a>
+                                            </li>
+                                            <li>
+                                              <a href="7thgrade.html" target="_blank">7th Grade</a>
+                                            </li>
+                                            <li>
+                                              <a href="6thgrade.html" target="_blank">6th Grade</a>
+                                            </li>
+                                            <li>
+                                              <a href="9and10yearold.html" target="_blank">9 and 10 Year Old Teams</a>
+                                            </li>
+                                          </ul>
+                                        </div>
+                                      </nav>
+                                    </div>
                                           <!-- End nav bar -->
                                           <!-- Start side nav bar -->
                                           <ul class="side-nav" id="mobile-demo">
