--- a/7thgrade.html
+++ b/7thgrade.html
@@ -20,6 +20,7 @@
                     <body>
                       <!-- Start Webpage -->
                       <!-- Start dropdown menu -->
+                      <!-- Start dropdown menu -->
                       <ul id="dropdown" class="dropdown-content collection">
                         <li class="collection-item avatar">
                           <div class="row">
@@ -125,8 +126,7 @@
                                     </li>
                                   </ul>
                                   <!-- end dropdown menu -->
-                                  <!-- Start nav bar -->
-                                  <div class="navbar-fixed">
+                      <div class="navbar-fixed">
                                     <nav class="transparent z-depth-0">
                                       <div class="nav-wrapper">
                                         <div class="row">
@@ -146,6 +146,9 @@
                                                 </li>
                                                 <li>
                                                   <a href="news.html" target="_blank">News</a>
+                                                </li>
+                                                <li>
+                                                  <a href="facilities.html" target="_blank">Facilities</a>
                                                 </li>
                                                 <li>
                                                   <a href="sponsors.html" target="_blank">Sponsors</a>
@@ -172,6 +175,9 @@
                                             </li>
                                             <li>
                                               <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
+                                            </li>
+                                            <li>
+                                              <a href="facilities.html" target="_blank">Facilities</a>
                                             </li>
                                             <li>
                                               <a href="sponsors.html" target="_blank">Sponsors</a>
