--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                                                   <a href="news.html" target="_blank">News</a>
                                                 </li>
                                                 <li>
+                                                  <a href="facilities.html" target="_blank">Facilities</a>
+                                                </li>
+                                                <li>
                                                   <a href="sponsors.html" target="_blank">Sponsors</a>
                                                 </li>
                                                 <li>
@@ -173,6 +176,9 @@
                                             </li>
                                             <li>
                                               <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
+                                            </li>
+                                            <li>
+                                              <a href="facilities.html" target="_blank">Facilities</a>
                                             </li>
                                             <li>
                                               <a href="sponsors.html" target="_blank">Sponsors</a>
@@ -206,6 +212,57 @@
                                       </section>
                                       <!-- end background image -->
                                       <!-- MODALS FOR ALL THE COACHES -->
+                                       <div id="varsityschedule" style="overflow-y:scroll" class="modal">
+                                                <div class="modal-content">
+                                                  <h4>Varsity Football Schedule</h4>
+                                                  <p><table style="color:black;">
+                                                    <tbody>
+                                                      <tr>
+                                                        <th>Date</th>
+                                                        <th>Time</th>
+                                                        <th>Location</th>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>August 21st</td>
+                                                        <td>7:30 PM</td>
+                                                        <td>Arlington</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>August 28th</td>
+                                                        <td>6:30 PM</td>
+                                                        <td>Ridgeway</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>Septempber 11th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>Munford</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>September 18th</td>
+                                                        <td>7:30 PM</td>
+                                                        <td>@ Cordova</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>September 25th</td>
+                                                        <td>7:30 PM</td>
+                                                        <td>Houston</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>October 16th</td>
+                                                        <td>7:30 PM</td>
+                                                        <td>@ Bartlett</td>
+                                                      </tr>
+                                                    </tbody>
+                                                  </table>
+                                                    </p>
+                                          
+                                                    </p>
+                                                  </div>
+                                                  <div class="modal-footer">
+                                                    <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
+                                                  </div>
+                                                </div>
+
                                       <div id="varsitycoach" class="modal">
                                         <div class="modal-content">
                                           <h4>Head Coach: Coach O'Neill</h4>
@@ -303,26 +360,25 @@
                                                           <h2>The Past</h2>
                                                           <p>With 8 appearances in the state football playoffs over the last 10 years, Collierville is well known across the state for football. All all time record of 20-28 has helped cement Collierville in the high school football arena. Take a look at the people that continue to make this possible.</p>
                                                           <p>
-                                                            <a class="btn btn-secondary" href="#" role="button">People &raquo;</a>
+                                                            <a class="btn btn-secondary" href="varsity.html" role="button">People &raquo;</a>
                                                           </p>
                                                         </div>
                                                         <!-- /.col-lg-4 -->
                                                         <div class="col-md-4">
                                                           <img class="rounded-circle" src="imgs/newdragon.png" alt="Generic placeholder image" width="140" height="140">
                                                             <h2>The Present</h2>
-                                                            <p>Led by Head Coach, Coach O'Neill, the Dragons are always getting prepared for the next season, constantly reminded of the standards they must uphold from the past. Take a look at this years Varsity Team below</p>
+                                                            <p>Led by Head Coach, Coach O'Neill, the Dragons are always getting prepared for the next season, constantly reminded of the standards they must uphold from the past. Checkout our facilities that make us one of the best programs in the state</p>
                                                             <p>
-                                                              <a class="btn btn-secondary" href="#" role="button">Varsity Football &raquo;</a>
+                                                              <a class="btn btn-secondary" href="facilities.html" role="button">Varsity Football &raquo;</a>
                                                             </p>
                                                           </div>
                                                           <!-- /.col-lg-4 -->
                                                           <div class="col-md-4">
                                                             <img class="square" src="imgs/jointheville.png" alt="Generic placeholder image" width="140" height="140">
                                                               <h2>The Future</h2>
-                                                              <p>We are always looking for new Dragons, We would love to have you. Fill out this form and we will reach out to you personally. Thank you.
-          </p>
+                                                              <p>Join us for a game! Checkout the schedule below</p>
                                                               <p>
-                                                                <a class="btn btn-secondary" href="#" role="button">Apply Here &raquo;</a>
+                                                                <a class="btn btn-secondary modal-trigger" href="#varsityschedule" role="button">Varsity Schedule &raquo;</a>
                                                               </p>
                                                             </div>
                                                             <!-- /.col-lg-4 -->
