Fixing order on mobile

--- a/7thgrade.html
+++ b/7thgrade.html
@@ -445,12 +445,12 @@
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Danny Shivers
             <br><span class="text-muted">Head Coach</span></h2>
             <p class="lead pl-3"></p>
           </div>
-          <div class="col-md-4 ml-3">
+          <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/oneill.jpg" alt="Generic placeholder image">
           </div>
         </div>
