--- a/6thgrade.html
+++ b/6thgrade.html
@@ -485,116 +485,86 @@
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Lamonte Bethea
             <br><span class="text-muted">Head Coach</span></h2>
             <p class="lead pl-3">Native of Greensboro, N.C.  Played three years of varsity football for Walter Hines Page high school.  Graduated in 1995 with a BS in Mathematics from North Carolina A&T State University.  Follow on career as a Naval aviator flying the EA6B and T-45 aircraft for the United States Navy.  Currently a Captain and Flex instructor for FedEx, B-757/767 aircraft.  Assistant coach for the Collierville Falcons during 2014-2015 season, Collierville Parks and Recreation Football League.  Head Coach for Collierville Dragons Grey, 3rd/4th Grade football, 2015.  Head Coach for Collierville Dragons White, 9U/10U football for highly successful 2016 season.  Current Head Coach for Collierville Dragons 6th Grade football.</p>
           </div>
-          <div class="col-md-4 ml-3">
+          <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/oneill.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
 
         <div class="row featurette">
-          <div class="col-md-7 order-md-2 pl-3">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
             <h2 class="featurette-heading pl-3">Billy Barnett
             <br><span class="text-muted">Offensive Coordinator</span></h2>
             <p class="lead pl-3">Coach Billy Barnett and his family have lived in Collierville TN since December 2015. Coach Barnett has ix years of youth football coaching experience after serving 21 Years in the USAF.  He has played various levels of football and says, “I’m exited to help develop our players into great football athletes and more importantly, responsible young men.”</p>
           </div>
-          <div class="col-md-4 order-md-1 ml-3">
+          <div class="col-md-4 order-md-1 order-1 ml-3">
             <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/miller.jpg" alt="Generic placeholder image">
           </div>
         </div>
         <div class="row featurette">
 
-          <div class="col-md-7">
+          <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Peter Hyman
             <br><span class="text-muted">Offensive/Defensive Line Coach</span></h2>
             <p class="lead pl-3">/p>
           </div>
-          <div class="col-md-4 ml-3">
+          <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/bradley.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
 
         <div class="row featurette">
-          <div class="col-md-7 order-md-2 pl-3">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
             <h2 class="featurette-heading pl-3">Clay Greene
             <br><span class="text-muted">Linebackers/ Defensive Backs Coach</span></h2>
             <p class="lead pl-3"></p>
           </div>
-          <div class="col-md-4 order-md-1 pl-3">
+          <div class="col-md-4 order-md-1 order-1 pl-3">
             <img class="img-thumbnail img-fluid mx-auto pl-3" src="imgs/coaches/graham.jpg" alt="Generic placeholder image">
           </div>
         </div>
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Frank Zubor
             <br><span class="text-muted">Special Teams/Defensive Backs Coach</span></h2>
             <p class="lead pl-3">Coach Zubor is in his 1st year coaching at Collierville.  Coach Zubor, wife Kristen and son Elek (6th Grade at Shilling Farms Middle) recently moved to Collierville from Medford, NJ.  He lettered in baseball at Lake Howell High School in Winter Park, FL</p>
           </div>
-          <div class="col-md-4 ml-3">
+          <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/davis.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7 order-md-2 pl-3">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
             <h2 class="featurette-heading pl-3">Steve Reeder
             <br><span class="text-muted">Offensive Line Coach</span></h2>
             <p class="lead pl-3">Coach Reeder is in his third year of teaching and coaching at Collierville High School. After a year of coaching Offensive and Defensive Line on the freshman level, he is now responsible for the Offensive Line for the Varsity. This is his 15th year overall, with stops at Cordova High School (6) and Germantown High School (6) previously. He just celebrated his 19th anniversary to his wife Kimberly Reeder and has one daughter, Chloe Reeder (12) who is a middle school Dragon. He teaches US Government and AP Psychology at school.</p>
           </div>
-          <div class="col-md-4 order-md-1 ml-3">
+          <div class="col-md-4 order-md-1 order-1 ml-3">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/reeder.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Ben Pelliterri
             <br><span class="text-muted">Running Backs Coach</span></h2>
             <p class="lead pl-3">Mr. Belliterri is working with the CHS Varsity Running Backs. This will be his second year coaching on the varsity level. Ben is also a graduate of Collierville HIgh School.
 
 </p>
           </div>
-          <div class="col-md-4 ml-3">
+          <div class="col-md-4 order-md-2 order-1 ml-3">
             <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/pelliterri.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2 pl-3">
-            <h2 class="featurette-heading pl-3">Nick Marchy
-            <br><span class="text-muted">Offensive Line Coach</span></h2>
-            <p class="lead pl-3">Coach Marchy is in his 3rd year teaching Physical Education at Collierville Middle School and his 2nd year on the Varsity Staff coaching Wide Receivers and Tight Ends for the Dragons.   This is his 17th overall year as a Coach. He was the Head Coach at Patterson High School in California for 4 years and the Offensive Coordinator for 6 years.  In 2013 Coach Marchy was named WAC Coach of the Year.  He also spent 5 years Coaching at Ceres High School in California.  Coach Marchy has coached Quarterbacks, Wide Receivers, Tight Ends, and Defensive Backs over his 17 years of Coaching</p>
-          </div>
-          <div class="col-md-4 order-md-1 ml-3">
-            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/marchy.jpg" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading pl-3 ">Henry Pilcher
-            <br><span class="text-muted">Coach</span></h2>
-            <p class="lead pl-3"></p>
-          </div>
-          <div class="col-md-4 ml-3">
-            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/pilcher.jpg" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2 pl-3">
-            <h2 class="featurette-heading pl-3">Jared Vowell
-            <br><span class="text-muted">Athletic Trainer</span></h2>
-            <p class="lead pl-3">Jared is a BOC certified and Tennessee Licensed Athletic Trainer since 2009. He has been with the Collierville Dragons since 2014. He is employed by Ortho One Sports Medicine in Collierville. Jared studied Athletic Training at the University of Tennessee at Martin, and graduated with a Bachelor of Science degree in Health and Human Performance in 2008. During his career he has spent time providing athletic training services to high schools and providing rehabilitation services in physical therapy clinics. He currently also serves on the Tennessee Athletic Trainers Society’s Young Professionals Committee.</p>
-          </div>
-          <div class="col-md-4 order-md-1 ml-3">
-            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/vowell.jpg" alt="Generic placeholder image">
-          </div>
+        
         </div>
         
 
