--- a/9and10yearold.html
+++ b/9and10yearold.html
@@ -573,114 +573,114 @@
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Mike O'Neill
             <br><span class="text-muted">Head Coach</span></h2>
             <p class="lead pl-3">Mike has been the head coach of the Varsity Collierville Dragons since 2012. From 2010–2011 Coach O’Neill served as the defensive coordinator and head strength coach. He also teaches Business Education at Collierville High. Coach O’Neill began coaching at the age of 18 working with the Germantown Middle School team for eight years. Prior to joining the CHS staff, Mike coached for nine years at Christian Brothers High School serving as defensive coordinator for six years. In 2005, CBHS was the State Championship Runner-Up. Before making a career change into education in 2000, Mike worked in the business world in sales and marketing. Mike is a graduate of Germantown High School where he lettered in Football and Baseball. As a student he won two state championships: he was a starting safety for the 1983 football team and catcher for the 1981 baseball team. Coach O’Neill was inducted into the Germantown Baseball Hall of Fame in 1997. He went on to play baseball for Memphis State University.</p>
           </div>
-          <div class="col-md-4 ml-3">
+          <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/oneill.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
 
         <div class="row featurette">
-          <div class="col-md-7 order-md-2 pl-3">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
             <h2 class="featurette-heading pl-3">Tommy Miller
             <br><span class="text-muted">Offensive Coordinator/Quarterbacks Coach</span></h2>
             <p class="lead pl-3">Tommy serves as the  Offensive Coordinator/Quarterbacks Coach for the Dragons. Coach Miller spent 3 years as the Head Coach at Bolton High School before joining the Dragons staff. During his time at Bolton, Coach Miller was named 2012 District 14AAA Coach of the Year, as well as the Shelby Metro Sports Talk Radio “Tommy Harrison” Coach of the Year. Prior to being named Head Coach he served as the Offensive Coordinator/Quarterbacks Coach for 6 years, having three Quarterbacks earn All Region honors under his tutelage. Before beginning his coaching career Tommy Miller played Arena Football for the Lubbock Lonestars in 2004 and the Tupelo Fire Ants in 2005. While with the Lonestars Coach Miller lead the leagues highest scoring offense scoring over 70 points per game. While with the Fire Ants Tommy Miller lead the United Indoor Football Association in Total Offense. Prior to playing professional football Coach Miller played collegiate football at Arkansas State University from 1998-2002 where he was a two-year starter at Quarterback.  He graduated high school from Mountain Home High School in Mountain Home Arkansas. While in high school, Coach Miller played Football, Basketball and Baseball. During his career at Mountain Home he earned All-State and All-Conference honors in Football, and set the Schools single season passing record. He also won a State Championship in Baseball in his junior season. Tommy Miller is married to his wife Casie Miller, of Germantown, TN. Casie played Basketball at ASU, as well as for the Chicago Blaze of the NWBL and a year overseas in Iceland. Together they have four children: Taylor, Jenna, Trenton, and Brock.</p>
           </div>
-          <div class="col-md-4 order-md-1 ml-3">
+          <div class="col-md-4 order-md-1 order-1 ml-3">
             <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/miller.jpg" alt="Generic placeholder image">
           </div>
         </div>
         <div class="row featurette">
 
-          <div class="col-md-7">
-            <h2 class="featurette-heading pl-3 ">Mike Bradley
+          <div class="col-md-7 order-md-1 order-2">
+            <h2 class="featurette-heading pl-3">Mike Bradley
             <br><span class="text-muted">Offensive/Defensive Line</span></h2>
             <p class="lead pl-3">Coach Bradley is entering his 31st year of coaching. He has coached both on the High School as well as the collegiate levels. He played both offensive line and Long Snapper at Delta State University, where he served as team Captain in 1983 along with being named to both the All-Gulf South Conference, and Academic All- Gulf South Conference teams. Coach Bradley has coached either the Offensive or Defensive lines as well as the Long Snappers here at CHS since the 1994 season. He is also the Head Softball Coach here at Collierville High School. He has a son Hunter Bradley that plays Football at Mississippi State University.</p>
           </div>
-          <div class="col-md-4 ml-3">
+          <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/bradley.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
 
         <div class="row featurette">
-          <div class="col-md-7 order-md-2 pl-3">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
             <h2 class="featurette-heading pl-3">Tom Graham
             <br><span class="text-muted">Linebackers Coach</span></h2>
             <p class="lead pl-3">Coach Graham is entering his 11th year at Collierville High School where he teaches Honors and Standard Chemistry. He served as the head wrestling coach for the 9 years and coached the freshman football team for 4 years before moving up to coach linebackers. He earned a BS in Chemistry and History at Crichton College, a MAEd at Union University, and his EdS at Liberty University. He is a graduate of Collierville High School where he participated on the wrestling team and coached the youth program while completing his undergraduate degrees.</p>
           </div>
-          <div class="col-md-4 order-md-1 pl-3">
+          <div class="col-md-4 order-md-1 order-1 pl-3">
             <img class="img-thumbnail img-fluid mx-auto pl-3" src="imgs/coaches/graham.jpg" alt="Generic placeholder image">
           </div>
         </div>
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Mitch Davis
             <br><span class="text-muted">Defensive Backs Coach</span></h2>
             <p class="lead pl-3">Coach Davis is married and has two sons.  He has coached in Memphis City Schools and Shelby County Schools for 33 years and served 18 years as a head coach.  Coach Davis works with the Defensive Backs for the Dragons.</p>
           </div>
-          <div class="col-md-4 ml-3">
+          <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/davis.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7 order-md-2 pl-3">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
             <h2 class="featurette-heading pl-3">Steve Reeder
             <br><span class="text-muted">Offensive Line Coach</span></h2>
             <p class="lead pl-3">Coach Reeder is in his third year of teaching and coaching at Collierville High School. After a year of coaching Offensive and Defensive Line on the freshman level, he is now responsible for the Offensive Line for the Varsity. This is his 15th year overall, with stops at Cordova High School (6) and Germantown High School (6) previously. He just celebrated his 19th anniversary to his wife Kimberly Reeder and has one daughter, Chloe Reeder (12) who is a middle school Dragon. He teaches US Government and AP Psychology at school.</p>
           </div>
-          <div class="col-md-4 order-md-1 ml-3">
+          <div class="col-md-4 order-md-1 order-1 ml-3">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/reeder.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Ben Pelliterri
             <br><span class="text-muted">Running Backs Coach</span></h2>
             <p class="lead pl-3">Mr. Belliterri is working with the CHS Varsity Running Backs. This will be his second year coaching on the varsity level. Ben is also a graduate of Collierville HIgh School.
 
 </p>
           </div>
-          <div class="col-md-4 ml-3">
+          <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/pelliterri.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7 order-md-2 pl-3">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
             <h2 class="featurette-heading pl-3">Nick Marchy
             <br><span class="text-muted">Offensive Line Coach</span></h2>
             <p class="lead pl-3">Coach Marchy is in his 3rd year teaching Physical Education at Collierville Middle School and his 2nd year on the Varsity Staff coaching Wide Receivers and Tight Ends for the Dragons.   This is his 17th overall year as a Coach. He was the Head Coach at Patterson High School in California for 4 years and the Offensive Coordinator for 6 years.  In 2013 Coach Marchy was named WAC Coach of the Year.  He also spent 5 years Coaching at Ceres High School in California.  Coach Marchy has coached Quarterbacks, Wide Receivers, Tight Ends, and Defensive Backs over his 17 years of Coaching</p>
           </div>
-          <div class="col-md-4 order-md-1 ml-3">
+          <div class="col-md-4 order-md-1 order-1 ml-3">
             <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/marchy.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Henry Pilcher
             <br><span class="text-muted">Coach</span></h2>
             <p class="lead pl-3"></p>
           </div>
-          <div class="col-md-4 ml-3">
+          <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/pilcher.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7 order-md-2 pl-3">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
             <h2 class="featurette-heading pl-3">Jared Vowell
             <br><span class="text-muted">Athletic Trainer</span></h2>
             <p class="lead pl-3">Jared is a BOC certified and Tennessee Licensed Athletic Trainer since 2009. He has been with the Collierville Dragons since 2014. He is employed by Ortho One Sports Medicine in Collierville. Jared studied Athletic Training at the University of Tennessee at Martin, and graduated with a Bachelor of Science degree in Health and Human Performance in 2008. During his career he has spent time providing athletic training services to high schools and providing rehabilitation services in physical therapy clinics. He currently also serves on the Tennessee Athletic Trainers Society’s Young Professionals Committee.</p>
           </div>
-          <div class="col-md-4 order-md-1 ml-3">
+          <div class="col-md-4 order-md-1 order-1 ml-3">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/vowell.jpg" alt="Generic placeholder image">
           </div>
         </div>
