--- a/facilities.html
+++ b/facilities.html
@@ -319,7 +319,7 @@
                                                   <div class="centered">
                                                     <h1>
                                                     <div class="spacer3">
-                                                      <center> Collierville High School Football Facilities </center>
+                                                      <center style="text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;"> Collierville High School Football Facilities </center>
                                                     </h1>
                                                     </div>
                                                   </div>
