--- a/9and10yearold.html
+++ b/9and10yearold.html
@@ -512,7 +512,7 @@
                                                   <div class="overall">
                                                     <div class="centeredalt">
                                                       <h1>
-                                                        <center> 9 and 10 Year Old Football </center></h1>
+                                                        <center style="text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;"> 9 and 10 Year Old Football </center></h1>
 
                                                 <div class="spacer">
                                                 <div class="spacer2"></div>
