--- a/freshman.html
+++ b/freshman.html
@@ -390,7 +390,7 @@
                                                   <div class="overall">
                                                     <div class="centeredalt">
                                                       <h1>
-                                                        <center> Freshman Football </center></h1>
+                                                        <center style="text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;"> Freshman Football </center></h1>
 
                                                 <div class="spacer">
                                                 <div class="spacer2"></div>
