Updating Side and NavBar

--- a/7thand8thgrade.html
+++ b/7thand8thgrade.html
@@ -127,6 +127,9 @@
                                                 <li>
                                                   <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                                 </li>
+                                                 <li>
+                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                                </li>
                                                 <li>
                                                   <a href="news.html" target="_blank">News</a>
                                                 </li>
@@ -159,6 +162,9 @@
                                             <li>
                                               <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                             </li>
+                                             <li>
+                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                                </li>
                                             <li>
                                               <a href="facilities.html" target="_blank">Facilities</a>
                                             </li>
