--- a/9and10yearold.html
+++ b/9and10yearold.html
@@ -126,6 +126,9 @@
                                                 <li>
                                                   <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                                 </li>
+                                                 <li>
+                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                                </li>
                                                 <li>
                                                   <a href="news.html" target="_blank">News</a>
                                                 </li>
@@ -158,6 +161,9 @@
                                             <li>
                                               <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                             </li>
+                                             <li>
+                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                                </li>
                                             <li>
                                               <a href="facilities.html" target="_blank">Facilities</a>
                                             </li>
