Updated Side and Nav Bar
Livi

--- a/schedule.html
+++ b/schedule.html
@@ -151,6 +151,9 @@
                                                   <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                                 </li>
                                                 <li>
+                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                                </li>
+                                                <li>
                                                   <a href="news.html" target="_blank">News</a>
                                                 </li>
                                                 <li>
@@ -181,6 +184,9 @@
                                             </li>
                                             <li>
                                               <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
+                                            </li>
+                                            <li>
+                                             <a href="seasonticket.html" target="_blank">Season Tickets</a>
                                             </li>
                                             <li>
                                               <a href="facilities.html" target="_blank">Facilities</a>
