--- a/news.html
+++ b/news.html
@@ -142,6 +142,9 @@
                                                 <li>
                                                   <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                                 </li>
+                                                 <li>
+                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                                </li>
                                                 <li>
                                                   <a href="news.html" target="_blank">News</a>
                                                 </li>
@@ -174,6 +177,10 @@
                                             <li>
                                               <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                             </li>
+                                            <li>
+                                               <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                             </li>
+
                                             <li>
                                               <a href="facilities.html" target="_blank">Facilities</a>
                                             </li>
