--- a/seasonticket.html
+++ b/seasonticket.html
@@ -130,6 +130,9 @@
                                                   <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                                 </li>
                                                 <li>
+                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                                </li>
+                                                <li>
                                                   <a href="news.html" target="_blank">News</a>
                                                 </li>
                                                 <li>
@@ -161,6 +164,9 @@
                                             <li>
                                               <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                             </li>
+                                            <li>
+                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                             </li>
                                             <li>
                                               <a href="facilities.html" target="_blank">Facilities</a>
                                             </li>
