--- a/varsity.html
+++ b/varsity.html
@@ -127,6 +127,9 @@
                                                   <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
                                                 </li>
                                                 <li>
+                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                                </li>
+                                                <li>
                                                   <a href="news.html" target="_blank">News</a>
                                                 </li>
                                                 <li>
@@ -157,6 +160,9 @@
                                             </li>
                                             <li>
                                               <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
+                                            </li>
+                                            <li>
+                                              <a href="seasonticket.html" target="_blank">Season Tickets</a>
                                             </li>
                                             <li>
                                               <a href="facilities.html" target="_blank">Facilities</a>
