Outline Header in White Now
Was previously black

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                                                   <div class="centered">
                                                     <h1>
                                                     <div class="spacer3">
-                                                      <center style="text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;"> Welcome to Collierville High School Football </center>
+                                                      <center style="text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Welcome to Collierville High School Football </center>
                                                     </h1>
                                                     </div>
                                                   </div>
