--- a/seasonticket.html
+++ b/seasonticket.html
@@ -319,7 +319,7 @@
                                                   <div class="centered">
                                                     <h1>
                                                     <div class="spacer3">
-                                                      <center style="text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;"> Collierville High School Football Season Tickets </center>
+                                                      <center style="text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Collierville High School Football Season Tickets </center>
                                                     </h1>
                                                     </div>
                                                   </div>
