--- a/sponsors.html
+++ b/sponsors.html
@@ -484,7 +484,7 @@
                                                   <div class="overall">
                                                     <div class="centeredalt">
                                                       <h1>
-                                                        <center style="text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;"> Sponsoring Collierville Football </center></h1>
+                                                        <center style="text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Sponsoring Collierville Football </center></h1>
 
                                                 <div class="spacer">
                                     <div class="spacer2"></div>
