--- a/index.html
+++ b/index.html
@@ -63,29 +63,17 @@
                                   </div>
                                   <div class="column">
                                     <span class="title">
-                                      <a href="8thgrade.html">8th Grade</a>
+                                      <a href="7thand8thgrade.html">7th/8th Grade</a>
                                     </span>
                                   </div>
                                   <div class="column">
-                                    <a class="secondary-content modal-trigger" href="#8thcoach">
+                                    <a class="secondary-content modal-trigger" href="#7th/8thcoach">
                                       <i class="material-icons">contact_mail</i>
                                     </a>
                                   </div>
                                 </div>
                               </li>
-                              <li class="collection-item avatar">
-                                <div class="row">
-                                  <div class="column">
-                                    <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
-                                    </div>
-                                    
-                                    <div class="column">
-                                      <a class="secondary-content modal-trigger" href="#7th/8thcoach">
-                                        <i class="material-icons">contact_mail</i>
-                                      </a>
-                                    </div>
-                                  </div>
-                                </li>
+                             
                                 <li class="collection-item avatar">
                                   <div class="row">
                                     <div class="column">
