--- a/9and10yearold.html
+++ b/9and10yearold.html
@@ -66,7 +66,7 @@
                                     </span>
                                   </div>
                                   <div class="column">
-                                    <a class="secondary-content modal-trigger" href="#8thcoach">
+                                    <a class="secondary-content modal-trigger" href="#7th/8thcoach">
                                       <i class="material-icons">contact_mail</i>
                                     </a>
                                   </div>
