Redid Color Correction
css update didn't propagate...TODO

--- a/seasonticket.html
+++ b/seasonticket.html
@@ -325,7 +325,7 @@
                                                   <div class="centered">
                                                     <h1>
                                                     <div class="spacer3">
-                                                      <center style="text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Collierville High School Football Season Tickets </center>
+                                                      <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Collierville High School Football Season Tickets </center>
                                                     </h1>
                                                     </div>
                                                   </div>
