--- a/7thand8thgrade.html
+++ b/7thand8thgrade.html
@@ -554,7 +554,7 @@
                                                   <div class="overall">
                                                     <div class="centeredalt">
                                                       <h1>
-                                                        <center style="text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> 7th and 8th Grade Football </center></h1>
+                                                        <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> 7th and 8th Grade Football </center></h1>
 
                                                 <div class="spacer">
                                                 <div class="spacer2"></div>
