--- a/news.html
+++ b/news.html
@@ -509,7 +509,7 @@
                                                   <div class="overall">
                                                     <div class="centeredalt">
                                                       <h1>
-                                                        <center style="text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Collierville Football News </center></h1>
+                                                        <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Collierville Football News </center></h1>
                                                         <div class="container-fluid2">
 
 <hr class="featurette-divider">
