--- a/schedule.html
+++ b/schedule.html
@@ -288,8 +288,8 @@
 </div>
 <!-- END FIXED BUTTONS -->
 
-<div class="centeredaltschedule"> 
-<h1> <center style="text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Schedule of Events </center> </h1>
+<div class="altschedule"> 
+<h1> <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Schedule of Events </center> </h1>
 <iframe src="https://calendar.google.com/calendar/embed?src=npuap45cajnn5ks7pi64a1ntrk%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0;display:block;margin: 0 auto;width:85%;" width="800" height="600" frameborder="0" scrolling="no" align="middle"></iframe>
 </div>
 
